made changes to image reference

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Subheading</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab sunt tempore minima quas vitae, velit consequuntur adipisci itaque dolorem quae, laborum possimus rem fugit dolor culpa, expedita at totam ipsam?</p>
     
-    <img src="./HTML5%20Logo.png" alt="HTML5 Logo">
+    <img src="./img/HTML5 Logo.png" alt="HTML5 Logo">
     
     <!-- Image Source: https://www.w3.org/html/logo/  -->
 
